acf: Fix a bug with text getting cut off for blog posts on FireFox

--- a/assets/sass/acf/_blog-posts.scss
+++ b/assets/sass/acf/_blog-posts.scss
@@ -55,7 +55,6 @@ section.blog-posts {
 .article__info {
     color: $color__text-main;
     padding: 1.5rem 2rem;
-    max-height: 100%;
     text-decoration: none;
 
     .date {
